# BTC-Gold-Airdrop

./: .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  main.py  messages_config.yaml  models.py  pyproject.toml
backup/: base.db
src/: configs_processor.py  keyboard.py  main.py  models.py  states.py
